<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mafia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings!</string>

    <string name="rule">Сюжетная линия игры такая: Жители города решают покончить с организованной преступностью и пересажать в тюрьму всех мафиози. В ответ мафия объявляет войну мирным жителям. Игра включает в себя две фазы – день и ночь. Днём мирные жители пытаются выявить членов мафиозной группировки и посадить их в тюрьму посредством всеобщего с мафией голосования, причём зачастую отсаживая самих себя. Мафии, для того чтобы выжить, приходится оставаться в тени, не обращать на себя особого внимания окружающих, искусно изворачиваться, маскируясь под мирного жителя. Ночью действует мафия, расправляясь с одним из мирных жителей. В рядах мирных работает комиссар, который по ночам собирает информацию обо всех гражданах и выявляет мафиози. Комиссар - единственный, кто достоверно может узнать правду о мафии. На него мирные жители и возлагают основную надежду. Мафия, в свою очередь, пытается побыстрей вычислить комиссара и уничтожить. В зависимости от количества игроков в игре могут присутствовать другие персонажи</string>
    
    <string name="civilRole">мирный житель. Бодрствует днём и мирно спит ночью. В процессе игры его могут убить мафия или посадить в тюрьму такие же мирные жители. Выживший гражданин победит только когда не останется мафии.</string>
    <string name="commissionerRole">комиссар. Работает под прикрытием. Постоянно борется со злом. Голосует в суде днем, а  ночью подсматривает и подслушивает, проверяя всех жителей. Так как комиссар действует в рамках закона, для победы ему нужна поддержка других мирных жителей.</string>
    <string name="mafiaRole">Криминальный элемент. Днём он, как мирный житель, может голосовать в суде, а ночью выбирает жертву для убийства. Его цель - отправить всех мирных жителей на городское кладбище.</string>
    <string name="doctorRole">Ночью может спасти от смерти одного из жителей города, хотя, как показывает практика, часто страдает эгоизмом. Два раза подряд одного жителя лечить нельзя.</string>
    <string name="mistressRole">Публичная дама, она же проститутка – играет на своей стороне, ночью для своих утех, выбирает того, кто ей симпатичней. Проведя ночь с любым из игроков, она даёт алиби этому игроку и этого игрока нельзя посадить в тюрьму на следующий день. Днём любовница, как ни в чём не бывало, становится добропорядочной леди из числа мирных жителей. Любовница может навестить любого игрока, как мафию, так и честного. Ночью любовница «любит» выбранного наугад игрока. Имеет право «любить» себя только один раз. Не может две ночи подряд «любить» одного и того же человека.</string>
    <string name="maniacRole">маньяк. Насмотрелся боевиков и теперь живёт по принципу: «всех убью, один останусь». Играет сам за себя, каждую ночь убивая одного из жителей города.</string>


</resources>
